--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "private": true,
   "engines": {
-    "node": "0.6.x"
+    "node": "6.3.0"
   },
   "dependencies": {
     "body-parser": "1.9.0",
