--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "errorhandler": "1.2.0",
     "express": "4.9.5",
     "express-flash": "0.0.2",
+    "express-session": "^1.14.1",
     "google-auth-library": "^0.9.8",
     "googleapis": "^12.4.0",
     "method-override": "2.2.0",
