--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "engines": {
     "node": "6.3.0"
   },
+  "scripts": {
+    "start": "node app.js"
+  },
   "dependencies": {
     "body-parser": "1.9.0",
     "cookie-parser": "1.3.3",
